--- a/WebMXH/WebMXH.csproj
+++ b/WebMXH/WebMXH.csproj
@@ -189,7 +189,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MeetingZoomController.cs" />
     <Compile Include="Controllers\UploadFileTestController.cs" />
-    <Compile Include="Controllers\UserTestController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -207,7 +207,7 @@
     <Compile Include="Models\COMMENT.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\GROUP.cs">
+    <Compile Include="Models\GROUPS.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\LoginData.cs" />
@@ -2043,7 +2043,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\MeetingZoom\Index.cshtml" />
     <Content Include="Views\CallwithUser\user1.cshtml" />
     <Content Include="Views\CallwithUser\user2.cshtml" />
@@ -2054,6 +2053,9 @@
     <Content Include="Views\User\Edit.cshtml" />
     <Content Include="Views\Home\Profiles.cshtml" />
     <Content Include="Views\Home\EditProfile.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\User\Create.cshtml" />
+    <Content Include="Views\Home\CreateNewPost.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
