Update post bài viết + chế độ

--- a/WebMXH/Web.config
+++ b/WebMXH/Web.config
@@ -75,7 +75,7 @@
   </entityFramework>
 <connectionStrings>
   
-<add name="MXH_GREENZONEEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WIN-6PUB4VAQN1G\SQLEXPRESS;initial catalog=MXH_GREENZONE;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+<add name="MXH_GREENZONEEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WIN-6PUB4VAQN1G\SQLEXPRESS;initial catalog=MXH_GREENZONE;persist security info=True;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
