--- a/WebMXH/WebMXH.csproj
+++ b/WebMXH/WebMXH.csproj
@@ -258,8 +258,8 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\assets\css\base.css" />
     <Content Include="Content\assets\css\emojionearea.min.css" />
+    <Content Include="Content\assets\css\style.css" />
     <Content Include="Content\assets\fonts\fontawesome-free-5.15.3-web\attribution.js" />
     <Content Include="Content\assets\fonts\fontawesome-free-5.15.3-web\css\all.css" />
     <Content Include="Content\assets\fonts\fontawesome-free-5.15.3-web\css\all.min.css" />
