update 2 model in 1 view

--- a/WebMXH/WebMXH.csproj
+++ b/WebMXH/WebMXH.csproj
@@ -2057,6 +2057,7 @@
     <Content Include="Views\User\Create.cshtml" />
     <Content Include="Views\Partials\EditNewUser.cshtml" />
     <Content Include="Views\User\Search.cshtml" />
+    <Content Include="Views\User\TwoModel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
