--- a/WebMXH/Web.config
+++ b/WebMXH/Web.config
@@ -18,7 +18,7 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <authentication mode="Forms">
-      <forms loginUrl="/Home/Login" defaultUrl="/Home/Index" name="WebMXH" slidingExpiration="true" timeout="30"></forms>
+      <forms defaultUrl="/Home/Login" name="WebMXH" slidingExpiration="true" timeout="30"></forms>
     </authentication>
   </system.web>
   <runtime>
